k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workwhile
  labels:
    app.kubernetes.io/name: workwhile
